tests/invalid/type/arity_math_pow_too_many.pts
import Math;

function main() : void {
    float x = Math.pow(2.0, 3.0, 4.0);
}
